# pinshock

./: .gitignore  CMakeLists.txt  Makefile  new_pinshock.cpp  pinshock.cpp  pinshock.h  todo.txt  tuner.py
bitset/: bitset.cpp  bitset.hpp
pingame/: bitboard.cpp  bitboard.hpp  pingame.cpp  pingame.hpp
scripts/: benchmark.py  csv_handler.py  plotter.py  tuner.py
